--- a/contact.html
+++ b/contact.html
@@ -1,11 +1,30 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
-    
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta
+      name="description"
+      content="Contact us | Get real authentic, hand-crafted guitars from Guitar Kings"
+    />
+    <title>Contact us</title>
+  </head>
+  <body>
+    <header>
+      <a href="index.html">Guitar Kings</a>
+
+      <!--site navigation-->
+      <nav>
+        <ul>
+          <li><a href="index.html">Home</a></li>
+          <li><a href="guitars/guitars.html">Guitars</a></li>
+          <li><a href="contact.html">Contact</a></li>
+        </ul>
+      </nav>
+    </header>
+    <main>
+      <h1>Contact Us</h1>
+    </main>
+    <footer>Copyright&copy;</footer>
+  </body>
 </html>
