--- a/guitars/adirondackred.html
+++ b/guitars/adirondackred.html
@@ -1,11 +1,70 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
-    
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta
+      name="description"
+      content="Adirondack Red | Get real authentic, hand-crafted guitars from Guitar Kings"
+    />
+    <title>Adirondack Red</title>
+  </head>
+  <body>
+    <header>
+      <a href="../index.html">Guitar Kings</a>
+      <!--site navigation-->
+      <nav>
+        <ul>
+          <li><a href="../index.html">Home</a></li>
+          <li><a href="guitars.html">Guitars</a></li>
+          <li><a href="../contact.html">Contact</a></li>
+        </ul>
+      </nav>
+    </header>
+
+    <main>
+      <div>
+        <section>
+          <div>
+            <img
+              src="../images/product.jpg"
+              alt="Adirondack red guitar. photo."
+            />
+          </div>
+          <div>
+            <img
+              src="../images/product-specific.jpg"
+              alt="strumming the guitar. photo."
+            />
+            <img
+              src="../images/product-specific.jpg"
+              alt="strumming the guitar. photo."
+            />
+            <img
+              src="../images/product-specific.jpg"
+              alt="strumming the guitar. photo."
+            />
+            <img
+              src="../images/product-specific.jpg"
+              alt="strumming the guitar. photo."
+            />
+          </div>
+        </section>
+        <section>
+          <h1>Adirondack Red</h1>
+          <p>
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse
+            quis dictum elit. In hac habitasse platea dictumst.
+          </p>
+          <p>
+            Nam sed lectus sit amet velit ultrices sollicitudin. Praesent
+            tristique justo et purus consectetur ultrices.
+          </p>
+          <h2>$500</h2>
+          <a href="../contact.html">Contact us</a>
+        </section>
+      </div>
+    </main>
+    <footer>Copyright &copy;</footer>
+  </body>
 </html>
