--- a/guitars/guitars.html
+++ b/guitars/guitars.html
@@ -1,11 +1,174 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
-    
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta
+      name="description"
+      content="Our guitars | Get real authentic, hand-crafted guitars from Guitar Kings"
+    />
+    <title>Guitars</title>
+  </head>
+  <body>
+    <header>
+      <a href="../index.html">Guitar Kings</a>
+      <!--site navigation-->
+      <nav>
+        <ul>
+          <li><a href="../index.html">Home</a></li>
+          <li><a href="guitars.html">Guitars</a></li>
+          <li><a href="../contact.html">Contact</a></li>
+        </ul>
+      </nav>
+    </header>
+
+    <main>
+      <h1>Guitars</h1>
+      <div>
+        <section>
+          <img
+            src="../images/product.jpg"
+            alt="adirondack red guitar. photo."
+          />
+          <div>
+            <section>
+              <h2>Adirondack Red</h2>
+              <p>$500</p>
+            </section>
+            <section>
+              <a href="adirondackred.html">View</a>
+            </section>
+          </div>
+        </section>
+
+        <section>
+          <img
+            src="../images/product.jpg"
+            alt="adirondack red guitar. photo."
+          />
+          <div>
+            <section>
+              <h2>Adirondack Red</h2>
+              <p><span>$500</span> $400</p>
+            </section>
+            <section>
+              <a href="adirondackred.html">On sale</a>
+            </section>
+          </div>
+        </section>
+
+        <section>
+          <img
+            src="../images/product.jpg"
+            alt="adirondack red guitar. photo."
+          />
+          <div>
+            <section>
+              <h2>Adirondack Red</h2>
+              <p>$500</p>
+            </section>
+            <section>
+              <a href="adirondackred.html">View</a>
+            </section>
+          </div>
+        </section>
+
+        <section>
+          <img
+            src="../images/product.jpg"
+            alt="adirondack red guitar. photo."
+          />
+          <div>
+            <section>
+              <h2>Adirondack Red</h2>
+              <p>$500</p>
+            </section>
+            <section>
+              <a href="adirondackred.html">View</a>
+            </section>
+          </div>
+        </section>
+
+        <section>
+          <img
+            src="../images/product.jpg"
+            alt="adirondack red guitar. photo."
+          />
+          <div>
+            <section>
+              <h2>Adirondack Red</h2>
+              <p>$500</p>
+            </section>
+            <section>
+              <a href="adirondackred.html">View</a>
+            </section>
+          </div>
+        </section>
+
+        <section>
+          <img
+            src="../images/product.jpg"
+            alt="adirondack red guitar. photo."
+          />
+          <div>
+            <section>
+              <h2>Adirondack Red</h2>
+              <p>$500</p>
+            </section>
+            <section>
+              <a href="adirondackred.html">View</a>
+            </section>
+          </div>
+        </section>
+
+        <section>
+          <img
+            src="../images/product.jpg"
+            alt="adirondack red guitar. photo."
+          />
+          <div>
+            <section>
+              <h2>Adirondack Red</h2>
+              <p>$500</p>
+            </section>
+            <section>
+              <a href="adirondackred.html">View</a>
+            </section>
+          </div>
+        </section>
+
+        <section>
+          <img
+            src="../images/product.jpg"
+            alt="adirondack red guitar. photo."
+          />
+          <div>
+            <section>
+              <h2>Adirondack Red</h2>
+              <p>$500</p>
+            </section>
+            <section>
+              <a href="adirondackred.html">View</a>
+            </section>
+          </div>
+        </section>
+
+        <section>
+          <img
+            src="../images/product.jpg"
+            alt="adirondack red guitar. photo."
+          />
+          <div>
+            <section>
+              <h2>Adirondack Red</h2>
+              <p>$500</p>
+            </section>
+            <section>
+              <a href="adirondackred.html">View</a>
+            </section>
+          </div>
+        </section>
+      </div>
+    </main>
+  </body>
 </html>
