--- a/guitars.html
+++ b/guitars.html
@@ -16,7 +16,7 @@
       <nav>
         <ul>
           <li><a href="../index.html">Home</a></li>
-          <li><a href="guitars.html">Guitars</a></li>
+          <li><a href="../guitars.html">Guitars</a></li>
           <li><a href="../contact.html">Contact</a></li>
         </ul>
       </nav>
@@ -36,7 +36,7 @@
               <p>$500</p>
             </section>
             <section>
-              <a href="adirondackred.html">View</a>
+              <a href="guitars/adirondackred.html">View</a>
             </section>
           </div>
         </section>
@@ -52,7 +52,7 @@
               <p><span>$500</span> $400</p>
             </section>
             <section>
-              <a href="adirondackred.html">On sale</a>
+              <a href="guitars/adirondackred.html">On sale</a>
             </section>
           </div>
         </section>
@@ -68,7 +68,7 @@
               <p>$500</p>
             </section>
             <section>
-              <a href="adirondackred.html">View</a>
+              <a href="guitars/adirondackred.html">View</a>
             </section>
           </div>
         </section>
@@ -84,7 +84,7 @@
               <p>$500</p>
             </section>
             <section>
-              <a href="adirondackred.html">View</a>
+              <a href="guitars/adirondackred.html">View</a>
             </section>
           </div>
         </section>
@@ -100,7 +100,7 @@
               <p>$500</p>
             </section>
             <section>
-              <a href="adirondackred.html">View</a>
+              <a href="guitars/adirondackred.html">View</a>
             </section>
           </div>
         </section>
@@ -116,7 +116,7 @@
               <p>$500</p>
             </section>
             <section>
-              <a href="adirondackred.html">View</a>
+              <a href="guitars/adirondackred.html">View</a>
             </section>
           </div>
         </section>
@@ -132,7 +132,7 @@
               <p>$500</p>
             </section>
             <section>
-              <a href="adirondackred.html">View</a>
+              <a href="guitars/adirondackred.html">View</a>
             </section>
           </div>
         </section>
@@ -148,7 +148,7 @@
               <p>$500</p>
             </section>
             <section>
-              <a href="adirondackred.html">View</a>
+              <a href="guitars/adirondackred.html">View</a>
             </section>
           </div>
         </section>
@@ -164,7 +164,7 @@
               <p>$500</p>
             </section>
             <section>
-              <a href="adirondackred.html">View</a>
+              <a href="guitars/adirondackred.html">View</a>
             </section>
           </div>
         </section>
