--- a/contact.html
+++ b/contact.html
@@ -17,7 +17,7 @@
       <nav>
         <ul>
           <li><a href="index.html">Home</a></li>
-          <li><a href="guitars/guitars.html">Guitars</a></li>
+          <li><a href="guitars.html">Guitars</a></li>
           <li><a href="contact.html">Contact</a></li>
         </ul>
       </nav>
