--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
       <nav>
         <ul>
           <li><a href="index.html">Home</a></li>
-          <li><a href="guitars/guitars.html">Guitars</a></li>
+          <li><a href="guitars.html">Guitars</a></li>
           <li><a href="contact.html">Contact</a></li>
         </ul>
       </nav>
@@ -25,7 +25,7 @@
       <!-- Included in the header because it introduces the site-->
       <section>
         <h1>Authentic Handmade Guitars</h1>
-        <a href="guitars/guitars.html">View Guitars</a>
+        <a href="guitars.html">View Guitars</a>
       </section>
     </header>
 
