--- a/guitars/adirondackred.html
+++ b/guitars/adirondackred.html
@@ -7,63 +7,62 @@
       name="description"
       content="Adirondack Red | Get real authentic, hand-crafted guitars from Guitar Kings"
     />
+    <link href="../styles/styles.css" rel="stylesheet" />
     <title>Adirondack Red</title>
+    <script
+      src="https://kit.fontawesome.com/cc20864ea7.js"
+      crossorigin="anonymous"
+    ></script>
   </head>
   <body>
-    <header>
-      <a href="../index.html">Guitar Kings</a>
+    <header id="header">
+      <a href="../index.html" class="logo">Guitar Kings</a>
       <!--site navigation-->
       <nav>
         <ul>
           <li><a href="../index.html">Home</a></li>
-          <li><a href="../guitars.html">Guitars</a></li>
+          <li><a href="../guitars.html" class="current">Guitars</a></li>
           <li><a href="../contact.html">Contact</a></li>
         </ul>
       </nav>
     </header>
 
     <main>
-      <div>
-        <section>
-          <div>
-            <img
-              src="../images/product.jpg"
-              alt="Adirondack red guitar. photo."
-            />
-          </div>
-          <div>
-            <img
-              src="../images/product-specific.jpg"
-              alt="strumming the guitar. photo."
-            />
-            <img
-              src="../images/product-specific.jpg"
-              alt="strumming the guitar. photo."
-            />
-            <img
-              src="../images/product-specific.jpg"
-              alt="strumming the guitar. photo."
-            />
-            <img
-              src="../images/product-specific.jpg"
-              alt="strumming the guitar. photo."
-            />
-          </div>
-        </section>
-        <section>
-          <h1>Adirondack Red</h1>
-          <p>
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse
-            quis dictum elit. In hac habitasse platea dictumst.
-          </p>
-          <p>
-            Nam sed lectus sit amet velit ultrices sollicitudin. Praesent
-            tristique justo et purus consectetur ultrices.
-          </p>
-          <h2>$500</h2>
-          <a href="../contact.html">Contact us</a>
-        </section>
-      </div>
+      <section>
+        <img src="../images/product.jpg" alt="Adirondack red guitar. photo." />
+        <div>
+          <img
+            src="../images/product-specific.jpg"
+            alt="strumming the guitar. photo."
+          />
+          <img
+            src="../images/product-specific.jpg"
+            alt="strumming the guitar. photo."
+          />
+          <img
+            src="../images/product-specific.jpg"
+            alt="strumming the guitar. photo."
+          />
+          <img
+            src="../images/product-specific.jpg"
+            alt="strumming the guitar. photo."
+          />
+        </div>
+      </section>
+
+      <section>
+        <h1>Adirondack Red</h1>
+        <p>
+          Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse
+          quis dictum elit. In hac habitasse platea dictumst.
+        </p>
+        <p>
+          Nam sed lectus sit amet velit ultrices sollicitudin. Praesent
+          tristique justo et purus consectetur ultrices.
+        </p>
+        <p>$500</p>
+        <a href="../contact.html" class="cta">Contact us</a>
+      </section>
     </main>
     <footer>Copyright &copy;</footer>
   </body>
