--- a/contact.html
+++ b/contact.html
@@ -7,23 +7,44 @@
       name="description"
       content="Contact us | Get real authentic, hand-crafted guitars from Guitar Kings"
     />
+    <link href="styles/styles.css" rel="stylesheet" />
     <title>Contact us</title>
+    <script
+      src="https://kit.fontawesome.com/cc20864ea7.js"
+      crossorigin="anonymous"
+    ></script>
   </head>
   <body>
-    <header>
-      <a href="index.html">Guitar Kings</a>
+    <header id="header">
+      <a href="index.html" class="logo">Guitar Kings</a>
 
       <!--site navigation-->
       <nav>
         <ul>
           <li><a href="index.html">Home</a></li>
           <li><a href="guitars.html">Guitars</a></li>
-          <li><a href="contact.html">Contact</a></li>
+          <li><a href="contact.html" class="current">Contact</a></li>
         </ul>
       </nav>
     </header>
     <main>
       <h1>Contact Us</h1>
+      <form action="sendsomewhere.php" method="POST">
+        <label for="name">Full name</label>
+        <input type="text" name="name" id="name" required />
+        <label for="email">Email</label>
+        <input type="email" name="email" id="email" required />
+        <label for="guitar">Guitar</label>
+        <select id="guitar" required>
+          <option value="guitar-one">Arondiack Red</option>
+          <option value="guitar-two">Arondiack Red-sale</option>
+        </select>
+        <input type="checkbox" name="update" id="emailupdate" />
+        <label for="emailupdate">Sign up for email updates.</label>
+        <label for="message">Message</label>
+        <textarea id="message" name="message"></textarea>
+        <input type="submit" value="Send Now" class="cta" />
+      </form>
     </main>
     <footer>Copyright&copy;</footer>
   </body>
