--- a/guitars.html
+++ b/guitars.html
@@ -7,16 +7,21 @@
       name="description"
       content="Our guitars | Get real authentic, hand-crafted guitars from Guitar Kings"
     />
+    <link href="styles/styles.css" rel="stylesheet" />
     <title>Guitars</title>
+    <script
+      src="https://kit.fontawesome.com/cc20864ea7.js"
+      crossorigin="anonymous"
+    ></script>
   </head>
   <body>
-    <header>
-      <a href="../index.html">Guitar Kings</a>
+    <header id="header">
+      <a href="../index.html" class="logo">Guitar Kings</a>
       <!--site navigation-->
       <nav>
         <ul>
           <li><a href="../index.html">Home</a></li>
-          <li><a href="../guitars.html">Guitars</a></li>
+          <li><a href="../guitars.html" class="current">Guitars</a></li>
           <li><a href="../contact.html">Contact</a></li>
         </ul>
       </nav>
@@ -25,150 +30,97 @@
     <main>
       <h1>Guitars</h1>
       <div>
-        <section>
+        <section class="productlisting">
           <img
             src="../images/product.jpg"
             alt="adirondack red guitar. photo."
           />
-          <div>
-            <section>
-              <h2>Adirondack Red</h2>
-              <p>$500</p>
-            </section>
-            <section>
-              <a href="guitars/adirondackred.html">View</a>
-            </section>
-          </div>
+          <h2>Adirondack Red</h2>
+          <p>$500</p>
+          <a href="guitars/adirondackred.html" class="cta cta-small">View</a>
         </section>
 
-        <section>
+        <section class="productlisting">
           <img
             src="../images/product.jpg"
             alt="adirondack red guitar. photo."
           />
-          <div>
-            <section>
-              <h2>Adirondack Red</h2>
-              <p><span>$500</span> $400</p>
-            </section>
-            <section>
-              <a href="guitars/adirondackred.html">On sale</a>
-            </section>
-          </div>
+          <h2>Adirondack Red</h2>
+          <p>$500</p>
+          <a href="guitars/adirondackred.html" class="cta cta-sale cta-small">On sale</a>
         </section>
 
-        <section>
+        <section class="productlisting">
           <img
             src="../images/product.jpg"
             alt="adirondack red guitar. photo."
           />
-          <div>
-            <section>
-              <h2>Adirondack Red</h2>
-              <p>$500</p>
-            </section>
-            <section>
-              <a href="guitars/adirondackred.html">View</a>
-            </section>
-          </div>
+          <h2>Adirondack Red</h2>
+          <p>$500</p>
+          <a href="guitars/adirondackred.html" class="cta cta-small">View</a>
         </section>
 
-        <section>
+        <section class="productlisting">
           <img
             src="../images/product.jpg"
             alt="adirondack red guitar. photo."
           />
-          <div>
-            <section>
-              <h2>Adirondack Red</h2>
-              <p>$500</p>
-            </section>
-            <section>
-              <a href="guitars/adirondackred.html">View</a>
-            </section>
-          </div>
+          <h2>Adirondack Red</h2>
+          <p>$500</p>
+          <a href="guitars/adirondackred.html" class="cta cta-small">View</a>
         </section>
 
-        <section>
+        <section class="productlisting">
           <img
             src="../images/product.jpg"
             alt="adirondack red guitar. photo."
           />
-          <div>
-            <section>
-              <h2>Adirondack Red</h2>
-              <p>$500</p>
-            </section>
-            <section>
-              <a href="guitars/adirondackred.html">View</a>
-            </section>
-          </div>
+          <h2>Adirondack Red</h2>
+          <p>$500</p>
+          <a href="guitars/adirondackred.html" class="cta cta-small">View</a>
         </section>
 
-        <section>
+        <section class="productlisting">
           <img
             src="../images/product.jpg"
             alt="adirondack red guitar. photo."
           />
-          <div>
-            <section>
-              <h2>Adirondack Red</h2>
-              <p>$500</p>
-            </section>
-            <section>
-              <a href="guitars/adirondackred.html">View</a>
-            </section>
-          </div>
+          <h2>Adirondack Red</h2>
+          <p>$500</p>
+          <a href="guitars/adirondackred.html" class="cta cta-small">View</a>
         </section>
 
-        <section>
+        <section class="productlisting">
           <img
             src="../images/product.jpg"
             alt="adirondack red guitar. photo."
           />
-          <div>
-            <section>
-              <h2>Adirondack Red</h2>
-              <p>$500</p>
-            </section>
-            <section>
-              <a href="guitars/adirondackred.html">View</a>
-            </section>
-          </div>
+          <h2>Adirondack Red</h2>
+          <p>$500</p>
+          <a href="guitars/adirondackred.html" class="cta cta-small">View</a>
         </section>
 
-        <section>
+        <section class="productlisting">
           <img
             src="../images/product.jpg"
             alt="adirondack red guitar. photo."
           />
-          <div>
-            <section>
-              <h2>Adirondack Red</h2>
-              <p>$500</p>
-            </section>
-            <section>
-              <a href="guitars/adirondackred.html">View</a>
-            </section>
-          </div>
+          <h2>Adirondack Red</h2>
+          <p>$500</p>
+          <a href="guitars/adirondackred.html" class="cta cta-small">View</a>
         </section>
 
-        <section>
+        <section class="productlisting">
           <img
             src="../images/product.jpg"
             alt="adirondack red guitar. photo."
           />
-          <div>
-            <section>
-              <h2>Adirondack Red</h2>
-              <p>$500</p>
-            </section>
-            <section>
-              <a href="guitars/adirondackred.html">View</a>
-            </section>
-          </div>
+          <h2>Adirondack Red</h2>
+          <p>$500</p>
+          <a href="guitars/adirondackred.html" class="cta cta-small"">View</a>
         </section>
       </div>
     </main>
+    <footer>Copyright&copy;</footer>
   </body>
 </html>
