--- a/index.html
+++ b/index.html
@@ -35,8 +35,10 @@
       </div>
       <!-- Included in the header because it introduces the site-->
       <section id="hero">
-        <h1>Authentic Handmade Guitars</h1>
-        <a href="guitars.html" class="cta">View Guitars</a>
+        <div class="hero-content">
+          <h1>Authentic Handmade Guitars</h1>
+          <a href="guitars.html" class="cta">View Guitars</a>
+        </div>
       </section>
     </header>
 
